# cpp-socket-chat

./: .gitignore  CMakeLists.txt  README.md
client/: .gitignore  CMakeLists.txt
client/include/common/: logger.h  pch.h
client/include/core/: ChatService.h  ConnectionService.h  Message.h  RoomService.h  User.h
client/include/network/: INetworkClient.h  NetworkClient.h  PacketHandler.h  Protocol.h
client/include/ui/: ChatClient.h  ConsoleUI.h  Lobby.h
client/src/: main.cpp
client/src/common/: logger.cpp
client/src/core/: ChatService.cpp  ConnectionService.cpp  Message.cpp  RoomService.cpp
client/src/network/: NetworkClient.cpp  PacketHandler.cpp
client/src/ui/: ChatClient.cpp  ConsoleUI.cpp  Lobby.cpp
include/application/: Server.h
include/common/: pch.h
include/concurrency/: ThreadPool.h
include/config/: Env.h
include/core/: Server.h
include/domain/client/: ClientManager.h
include/domain/handler/: IPacketHandler.h
include/network/: ConnectionManager.h  Listener.h
include/utils/: Env.h  Logger.h  Protocol.h  pch.h
include/utils/thread/: ThreadPool.h  ThreadSafeQueue.h
server/: CMakeLists.txt
server/include/application/: Server.h
server/include/common/: Utils.h
server/include/concurrency/: ThreadPool.h  ThreadSafeQueue.h
server/include/containers/: SafeQueue.h
server/include/domain/client/: ClientManager.h
server/include/domain/handler/: MessageHandler.h  NicknameHandler.h  PacketHandler.h  RoomHandler.h
server/include/domain/room/: Room.h  RoomManager.h
server/include/io/: EpollManager.h
server/include/network/: PacketReceiver.h  PacketSender.h  Protocol.h
server/src/application/: Server.cpp
server/src/common/: Utils.cpp
server/src/concurrency/: ThreadPool.cpp
server/src/config/: Env.cpp
server/src/domain/handler/: MessageHandler.cpp  PacketHandler.cpp  RoomHandler.cpp
server/src/domain/room/: Room.cpp  RoomManager.cpp
server/src/logger/: Logger.cpp
server/src/network/: ConnectionManager.cpp  PacketReceiver.cpp
src/: main.cpp
src/application/: Server.cpp
src/core/: Server.cpp
src/domain/client/: ClientManager.cpp
src/domain/handler/: NicknameHandler.cpp
src/io/: EpollManager.cpp
src/network/: Listener.cpp  PacketSender.cpp
src/utils/: Env.cpp  Logger.cpp
src/utils/thread/: ThreadPool.cpp
